# blackberry-py

./: .hgeol  .hgignore  .hgsub  .hgsubstate  CREDITS  README  README.rst  tart.ini  todo.txt
BB-Py-Twitter/: bar-descriptor.xml  build.cmd
BB-Py-Twitter/bbpy_twitter/: Button.qml  OAuthProvider.py  ToolBar.qml  Twitter.py  ca-certificates.crt  main.py  main.qml
CascadesLiveView/: bar-descriptor.xml  build.cmd  build.sh  release.cmd  release.sh  tart-project.ini
CascadesLiveView/app/: app.py
CascadesLiveView/assets/: MainPage.qml  main.qml
DialogSample/: bar-descriptor.xml  build.cmd
DialogSample/sample/: main.py  main.qml
HelloWorld/: bar-descriptor.xml  build.cmd  main.py  main.qml
KeyboardSample/sample/: main.py
LitePOC/: bar-descriptor.xml
LitePOC/lite/: main.py  main.qml
PySide/: bbpy-pyside-packager.py
QMLViewSample/: bar-descriptor.xml  build.cmd
QMLViewSample/viewer/: Button.qml  error_page.qml  main.py  main.qml
TartStart/: Makefile  TartStart.pro  config.pri
TartStart/src/: app.cpp  app.hpp  main.cpp  push.cpp  push.hpp  tart.cpp  tart.hpp
TartStart/translations/: Makefile
TextEditorSample/sample/: EditPanel.qml  FileChooser.qml  StatusBar.qml  StatusItem.qml  main.py  main.qml
ZombieSlayer/: app.py  bar-descriptor.xml  build.cmd  buildsim.cmd  mirrordir.cfg  release.cmd  tart-project.ini  tart.cfg
ZombieSlayer/assets/: main.qml
bbpy/: __init__.py  _main.py  app.py  bpsloop.py  loader.py
bbpy/wrapped/: __init__.py  _wrap.py  bps.py  img.py
demo/: README.txt  bar-descriptor.xml  bbxrun.py  build.cmd  main.py
demo/bbxpy/: image.py
demo/bbxpy/wrapped/: screen.py
demo/scripts/: bouncing_logo.py  cli.py  display_info.py  event_test.py  font_test.py  geotrace.py  image_test.py  notifications.py  play_sound.py  python_info.py
freetype-py-0.3.3/: PKG-INFO
freetype-py-0.3.3/examples/: agg-trick.py  ascii.py  example_1.py  font-info.py  ftdump.py  opengl.py  sfnt-names.py  sphere.py  test.py  wordle.py
freetype-py-0.3.3/freetype/: __init__.py
imports/BlackBerryPy/: Button.qml  CheckBox.qml  FixedImage.qml  InputField.qml  KeyboardProxy.qml  SwipeDownMenu.qml  qmldir
launch/: .cproject  .project  bar-descriptor.xml
launch/src/: bbxmain.py  pyinit.h
launch2/: .cproject  .project  bar-descriptor.xml
launch2/src/: bbxmain.py  main.c  pyinit.c
launcher/: bar-descriptor.xml
launcher/src/: bbxmain.py  main.c  pyinit.c  pyinit.h
legal/: BBPY-LICENSE.txt  ThirdPartyLicenses.txt
old_samples/HelloWorld/: bar-descriptor.xml  main.qml
old_samples/KeyboardSample/: bar-descriptor.xml
old_samples/KeyboardSample/sample/: main.qml
old_samples/QMLViewSample/: CREDITS  build.cmd  build.sh
old_samples/QMLViewSample/viewer/: main.py
old_samples/TextEditorSample/: CREDITS  bar-descriptor.xml  todo.txt
old_samples/TextEditorSample/sample/: editor.py
patches/: 03-fix-laggy-scrolling.patch
pyside/: 01-shiboken-qnx.patch  02-pyside-qnx.patch  bbpy-packager.py  bbpy-pyside-packager.py
qlib/: bps.py  screen.py  wrapper_util.py
qtcascadesbinding/: CMakeLists.txt
qtcascadesbinding/qtcascades/: CMakeLists.txt  global.h  namespace-workaround.patch  typesystem_qtcascades.xml
qtcascadesbinding/qtcascades/glue/: bb_cascades_application_init.cpp
samples/: bbxrun.py
samples/HelloWorld/: build.sh  tart-project.ini
samples/HelloWorld/assets/: main.qml
samples/HtmlScraper/: app.py  tart-project.ini
samples/HtmlScraper/assets/: main.qml
samples/OpenGLSample/: mirrordir.cfg  tart-project.ini
samples/OpenGLSample/app/: app.py  demo.py
samples/OpenGLSample/assets/: OglWindow.qml  main.qml
samples/RssReader/: README.txt  tart-project.ini
samples/RssReader/app/: app.py
samples/RssReader/assets/: MainPage.qml  main.qml
samples/SendEmailSample/: tart-project.ini
samples/SendEmailSample/app/: app.py  navigator_handler.py  navigator_invoke.py
samples/SendEmailSample/assets/: main.qml
samples/StarterApp/: tart-project.ini
samples/StarterApp/app/: app.py
samples/StarterApp/assets/: help.html  main.qml
samples/TextureSample/: tart-project.ini
samples/TextureSample/app/: demo.py  shader1.frag  shader1.vert
samples/TextureSample/assets/: main.qml
samples/bbxpy/: __init__.py  screen.py
samples/bbxpy/wrapped/: __init__.py  bps.py  img.py  screen.py
samples/scripts/: deviceinfo.py  display_info.py  event_test.py  geotrace.py  image_test.py  notifications.py  os_info.py  play_sound.py  psychedelic.py  script2.py
studies/: FixedImageMain.qml
tart/assets/: tart.js
tart/entry/: TartStart  TartStart-x86
tart/js/: tart.js
tart/python/: blackberry_tart.py  cli.py  slog2.py  tart.py
tart/python/bb/: _wrap.py  bbutil.py  bps.py  img.py  payment.py
tart/python/pyggles/: __init__.py  color.py  drawable.py  drawing.py  egl.py  font.py  image.py  opengl.py  shaders.py  timer.py  timing.py  util.py
tart/python/tart/: __init__.py  app.py  cli.py  core.py  font.py  opengl.py  payment_handler.py  rect.py  shaders.py  util.py  window.py
tart/tart-libs/: debug.h  fonts.c  fonts.h  makefile
